--- a/index.html
+++ b/index.html
@@ -99,29 +99,110 @@
 		<section>
 			<div class="burghers__page">
 				<div class="burghers__container">
-					<div class="burghers__item">
-						<div class="burgher__item-elem">
-							<div class="elem__img"></div>
-							<div class="elem__txt">Состав</div>
+					<div class="burghers__content burghers__content1">
+						<div class="content__elem">
+							<div class="elem__img-item">
+								<img src="img/black_bugher.png" alt="" class="brg-img">
+							</div>
+							<div class="elem__details-item">
+								<div class="composition__elem">
+									<div class="composition__img"><img src="img/burger.png" alt=""></div>
+									<div class="composition__txt">Состав</div>
+								</div>
+								<div class="kkal__elem">
+									<div class="kkal-img">
+										<img src="img/kkal.png" alt="">
+									</div>
+							<div class="kkal_txt">
+								<div class="kkal_txt1">1200</div>
+								<div class="kkal_txt2">ккал</div>
+							</div>
+								</div>
+							</div>
 						</div>
-							<div class="burghers__img">
-						<img src="img/black_bugher.png" alt="" class="brg__img">
-					</div>
-						<div class="burgher__item-elem2">
-							<div class="elem__img2"><span class="item-elem2-txt" >1200</span></div>
-							<div class="elem__txt2">ккал</div>
-						</div>
-					</div>
-					<div class="burghers__details">
-						<div class="details__name">Dark BEEF<br>
+						<div class="content__txt">
+								<div class="details__name">Dark BEEF<br>
 					Burger</div>
-						<div class="details__dscr">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</div>
+					<div class="content__txt-details">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</div>
 						<div class="details__price">
 							<span class="price__nr">500</span>
 							<span class="price__txt">рублей</span>
 						</div>
-						<button class="burghers__btn">Заказать</button>
+						</div>
+				<button class="burghers__btn">
+					Заказать
+				</button>
 					</div>
+										<div class="burghers__content burghers__content2">
+						<div class="content__elem">
+							<div class="elem__img-item">
+								<img src="img/black_bugher.png" alt="" class="brg-img">
+							</div>
+							<div class="elem__details-item">
+								<div class="composition__elem">
+									<div class="composition__img"><img src="img/burger.png" alt=""></div>
+									<div class="composition__txt">Состав</div>
+								</div>
+								<div class="kkal__elem">
+									<div class="kkal-img">
+										<img src="img/kkal.png" alt="">
+									</div>
+							<div class="kkal_txt">
+								<div class="kkal_txt1">1200</div>
+								<div class="kkal_txt2">ккал</div>
+							</div>
+								</div>
+							</div>
+						</div>
+						<div class="content__txt">
+								<div class="details__name">Dark BEEF<br>
+					Burger</div>
+					<div class="content__txt-details">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</div>
+						<div class="details__price">
+							<span class="price__nr">500</span>
+							<span class="price__txt">рублей</span>
+						</div>
+						</div>
+				<button class="burghers__btn">
+					Заказать
+				</button>
+					</div>
+										<div class="burghers__content burghers__content3">
+						<div class="content__elem">
+							<div class="elem__img-item">
+								<img src="img/black_bugher.png" alt="" class="brg-img">
+							</div>
+							<div class="elem__details-item">
+								<div class="composition__elem">
+									<div class="composition__img"><img src="img/burger.png" alt=""></div>
+									<div class="composition__txt">Состав</div>
+								</div>
+								<div class="kkal__elem">
+									<div class="kkal-img">
+										<img src="img/kkal.png" alt="">
+									</div>
+							<div class="kkal_txt">
+								<div class="kkal_txt1">1200</div>
+								<div class="kkal_txt2">ккал</div>
+							</div>
+								</div>
+							</div>
+						</div>
+						<div class="content__txt">
+								<div class="details__name">Dark BEEF<br>
+					Burger</div>
+					<div class="content__txt-details">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</div>
+						<div class="details__price">
+							<span class="price__nr">500</span>
+							<span class="price__txt">рублей</span>
+						</div>
+						</div>
+				<button class="burghers__btn">
+					Заказать
+				</button>
+					</div>
+					</div>
+					<div class="burghers__arrow">
 						<div class="burghers__arrow-left">
 					<a href="#">
 						<img src="img/arrow-scroll_left.png" alt="">
@@ -132,6 +213,7 @@
 						<img src="img/arrow-scroll_right.png" alt="">
 					</a>
 				</div>
+				</div></div>
 				</div>
 
 			</div>
@@ -416,12 +498,8 @@
                 </label>
 			</div>
 		</div>
-		<div class="button button_form">
-			<a href="#">Заказать</a>
-		</div><!--button-->
-		<div class="button__clear">
-			<a href="#">Очистить</a></div>
-	</div>
+	<button class="button button_form">Заказать</button>
+		<button class="button__clear">Очистить</button>
 	</form>
 	</section>
 	<section>
