--- a/index.html
+++ b/index.html
@@ -96,16 +96,14 @@
 		</div><!--we-best-page-->
 	</section><!--we-best-->
 	<section>
-		<section>
-			<div class="burghers__page">
-				<div class="burghers__container">
-					<div class="burghers__content burghers__content1">
-						<div class="content__elem">
-							<div class="elem__img-item">
-								<img src="img/black_bugher.png" alt="" class="brg-img">
-							</div>
-							<div class="elem__details-item">
-								<div class="composition__elem">
+		<div class="slider__menu">
+			<div class="slider">
+			<div class="slider__row" id="slider">
+			<div class="slider__elem">
+				<div class="slider__img">
+					<img src="img/black_bugher.png" alt="" class="brg-img">
+				</div>
+				<div class="slider__details">								<div class="composition__elem">
 									<div class="composition__img"><img src="img/burger.png" alt=""></div>
 									<div class="composition__txt">Состав</div>
 								</div>
@@ -117,29 +115,25 @@
 								<div class="kkal_txt1">1200</div>
 								<div class="kkal_txt2">ккал</div>
 							</div>
-								</div>
-							</div>
-						</div>
-						<div class="content__txt">
-								<div class="details__name">Dark BEEF<br>
+								</div></div>
+				<div class="slider__txt">
+				<div class="details__name">Dark BEEF<br>
 					Burger</div>
 					<div class="content__txt-details">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</div>
 						<div class="details__price">
 							<span class="price__nr">500</span>
 							<span class="price__txt">рублей</span>
 						</div>
-						</div>
-				<button class="burghers__btn">
+						<button class="burghers__btn">
 					Заказать
 				</button>
-					</div>
-										<div class="burghers__content burghers__content2">
-						<div class="content__elem">
-							<div class="elem__img-item">
-								<img src="img/black_bugher.png" alt="" class="brg-img">
-							</div>
-							<div class="elem__details-item">
-								<div class="composition__elem">
+				</div>
+			</div><!--slider__elem-->
+						<div class="slider__elem">
+				<div class="slider__img">
+					<img src="img/burgher2.png" alt="" class="brg-img">
+				</div>
+				<div class="slider__details">								<div class="composition__elem">
 									<div class="composition__img"><img src="img/burger.png" alt=""></div>
 									<div class="composition__txt">Состав</div>
 								</div>
@@ -151,29 +145,25 @@
 								<div class="kkal_txt1">1200</div>
 								<div class="kkal_txt2">ккал</div>
 							</div>
-								</div>
-							</div>
-						</div>
-						<div class="content__txt">
-								<div class="details__name">Dark BEEF<br>
+								</div></div>
+				<div class="slider__txt">
+				<div class="details__name">Dark BEEF<br>
 					Burger</div>
 					<div class="content__txt-details">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</div>
 						<div class="details__price">
 							<span class="price__nr">500</span>
 							<span class="price__txt">рублей</span>
 						</div>
-						</div>
-				<button class="burghers__btn">
+						<button class="burghers__btn">
 					Заказать
 				</button>
-					</div>
-										<div class="burghers__content burghers__content3">
-						<div class="content__elem">
-							<div class="elem__img-item">
-								<img src="img/black_bugher.png" alt="" class="brg-img">
-							</div>
-							<div class="elem__details-item">
-								<div class="composition__elem">
+				</div>
+			</div><!--slider__elem-->
+						<div class="slider__elem">
+				<div class="slider__img">
+					<img src="img/burgher3.png" alt="" class="brg-img">
+				</div>
+				<div class="slider__details">								<div class="composition__elem">
 									<div class="composition__img"><img src="img/burger.png" alt=""></div>
 									<div class="composition__txt">Состав</div>
 								</div>
@@ -185,40 +175,96 @@
 								<div class="kkal_txt1">1200</div>
 								<div class="kkal_txt2">ккал</div>
 							</div>
-								</div>
-							</div>
-						</div>
-						<div class="content__txt">
-								<div class="details__name">Dark BEEF<br>
+								</div></div>
+				<div class="slider__txt">
+				<div class="details__name">Dark BEEF<br>
 					Burger</div>
 					<div class="content__txt-details">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</div>
 						<div class="details__price">
 							<span class="price__nr">500</span>
 							<span class="price__txt">рублей</span>
 						</div>
-						</div>
-				<button class="burghers__btn">
+						<button class="burghers__btn">
 					Заказать
 				</button>
-					</div>
-					</div>
-					<div class="burghers__arrow">
-						<div class="burghers__arrow-left">
+				</div>
+			</div><!--slider__elem-->
+						<div class="slider__elem">
+				<div class="slider__img">
+					<img src="img/burgher3.png" alt="" class="brg-img">
+				</div>
+				<div class="slider__details">								<div class="composition__elem">
+									<div class="composition__img"><img src="img/burger.png" alt=""></div>
+									<div class="composition__txt">Состав</div>
+								</div>
+								<div class="kkal__elem">
+									<div class="kkal-img">
+										<img src="img/kkal.png" alt="">
+									</div>
+							<div class="kkal_txt">
+								<div class="kkal_txt1">1200</div>
+								<div class="kkal_txt2">ккал</div>
+							</div>
+								</div></div>
+				<div class="slider__txt">
+				<div class="details__name">Dark BEEF<br>
+					Burger</div>
+					<div class="content__txt-details">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</div>
+						<div class="details__price">
+							<span class="price__nr">500</span>
+							<span class="price__txt">рублей</span>
+						</div>
+						<button class="burghers__btn">
+					Заказать
+				</button>
+				</div>
+			</div><!--slider__elem-->
+						<div class="slider__elem">
+				<div class="slider__img">
+					<img src="img/burgher4.png" alt="" class="brg-img">
+				</div>
+				<div class="slider__details">								<div class="composition__elem">
+									<div class="composition__img"><img src="img/burger.png" alt=""></div>
+									<div class="composition__txt">Состав</div>
+								</div>
+								<div class="kkal__elem">
+									<div class="kkal-img">
+										<img src="img/kkal.png" alt="">
+									</div>
+							<div class="kkal_txt">
+								<div class="kkal_txt1">1200</div>
+								<div class="kkal_txt2">ккал</div>
+							</div>
+								</div></div>
+				<div class="slider__txt">
+				<div class="details__name">Dark BEEF<br>
+					Burger</div>
+					<div class="content__txt-details">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</div>
+						<div class="details__price">
+							<span class="price__nr">500</span>
+							<span class="price__txt">рублей</span>
+						</div>
+						<button class="burghers__btn">
+					Заказать
+				</button>
+				</div>
+			</div><!--slider__elem-->
+			</div><!--slider__row-->
+		</div><!--slider-->
+		<div class="burghers__arrow">
+						<div class="burghers__arrow-left" id="left">
 					<a href="#">
 						<img src="img/arrow-scroll_left.png" alt="">
 					</a>
 				</div>
-				<div class="burghers__arrow-right">
+				<div class="burghers__arrow-right" id="right">
 					<a href="#">
 						<img src="img/arrow-scroll_right.png" alt="">
 					</a>
 				</div>
-				</div></div>
 				</div>
-
-			</div>
-		</section>
-
+		</div><!--slider-menu-->
+	</section>
 <section>
 	<div class="team__page">
 		<div class="team__container">
@@ -341,13 +387,13 @@
 </div><!--menu__page-->
 </section>
 
-<div class="people-page">
+<div class="people-page" id="peoplePage">
 		<ul class="people__elements">
 			<li class="people__container"  style="background-image: url(img/people_img1.jpg)">
 				<div class="people__content">
 					<div class="people__name">Константин Спилберг</div>
-					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<a href="#" class="more__btn">
+					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn" id="more">
 						<div class="more-btn__txt">Подробнее</div>
 					</a>
 				</div>
@@ -355,8 +401,8 @@
 						<li class="people__container"  style="background-image: url(img/people_img2.jpg)">
 				<div class="people__content">
 					<div class="people__name">Константин Спилберг</div>
-					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<a href="#" class="more__btn">
+					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn" id="more">
 						<div class="more-btn__txt">Подробнее</div>
 					</a>
 				</div>
@@ -364,8 +410,8 @@
 						<li class="people__container"  style="background-image: url(img/people_img3.jpg)">
 				<div class="people__content">
 					<div class="people__name">Константин Спилберг</div>
-					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<a href="#" class="more__btn">
+					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn" id="more">
 						<div class="more-btn__txt">Подробнее</div>
 					</a>
 				</div>
@@ -373,8 +419,8 @@
 						<li class="people__container"  style="background-image: url(img/people_img4.jpg)">
 				<div class="people__content">
 					<div class="people__name">Константин Спилберг</div>
-					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<a href="#" class="more__btn">
+					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn" id="more">
 						<div class="more-btn__txt">Подробнее</div>
 					</a>
 				</div>
@@ -382,8 +428,8 @@
 						<li class="people__container"  style="background-image: url(img/people_img5.jpg)">
 				<div class="people__content">
 					<div class="people__name">Константин Спилберг</div>
-					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<a href="#" class="more__btn">
+					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn" id="more">
 						<div class="more-btn__txt">Подробнее</div>
 					</a>
 				</div>
@@ -391,8 +437,8 @@
 						<li class="people__container"  style="background-image: url(img/people_img6.jpg)">
 				<div class="people__content">
 					<div class="people__name">Константин Спилберг</div>
-					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<a href="#" class="more__btn">
+					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn" id="more">
 						<div class="more-btn__txt">Подробнее</div>
 					</a>
 				</div>
@@ -400,8 +446,8 @@
 						<li class="people__container"  style="background-image: url(img/people_img7.jpg)">
 				<div class="people__content">
 					<div class="people__name">Константин Спилберг</div>
-					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<a href="#" class="more__btn">
+					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn" id="more">
 						<div class="more-btn__txt">Подробнее</div>
 					</a>
 				</div>
@@ -409,10 +455,9 @@
 						<li class="people__container"  style="background-image: url(img/people_img8.jpg)">
 				<div class="people__content">
 					<div class="people__name">Константин Спилберг</div>
-					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<a href="#" class="more__btn">
-						<div class="more-btn__txt">Подробнее</div>
-					</a>
+					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+
+					<button class="more__btn" id="more">Подробнее</button>
 				</div>
 			</li>
 		</ul>
