--- a/index.html
+++ b/index.html
@@ -380,75 +380,77 @@
 	</section>
 	<section  class="section">
     <div  class="people-page" id="peoplePage">
-		<ul class="people__elements">
-			<li class="people__container"  style="background-image: url(img/people_img1.jpg)">
-				<div class="people__content">
+		<ul class="people__elements" id="accord">
+			<li class="people__container" style="background-image: url(img/people_img1.jpg)">
+				<div class="people__content" id="overlayContainer">
 					<div class="people__name">Константин Спилберг</div>
 					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<button class="more__btn" id="openOverlay">
+					<button class="moreBtn">
 						<div class="bText">Подробнее</div></button>
 					</div>
 
 			</li>
-						<li class="people__container"  style="background-image: url(img/people_img2.jpg)">
-				<div class="people__content">
+						<li class="people__container" style="background-image: url(img/people_img2.jpg)">
+				<div class="people__content" id="overlayContainer">
 					<div class="people__name">Константин Спилберг</div>
 					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<button class="more__btn" id="openOverlay">
+					<button class="moreBtn" id="openNow">
 						<div class="bText">Подробнее</div></button>
 				</div>
 			</li>
-						<li class="people__container"  style="background-image: url(img/people_img3.jpg)">
-				<div class="people__content">
+						<li class="people__container" style="background-image: url(img/people_img3.jpg)">
+				<div class="people__content" id="overlayContainer">
 					<div class="people__name">Константин Спилберг</div>
 					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<button class="more__btn" id="openOverlay">
+					<button class="moreBtn" id="openNow">
 						<div class="bText">Подробнее</div></button>
 				</div>
 			</li>
-						<li class="people__container"  style="background-image: url(img/people_img4.jpg)">
-				<div class="people__content">
+						<li class="people__container" style="background-image: url(img/people_img4.jpg)">
+				<div class="people__content" id="overlayContainer">
 					<div class="people__name">Константин Спилберг</div>
 					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<button class="more__btn" id="openOverlay">
+					<button class="moreBtn" id="openNow">
 						<div class="bText">Подробнее</div></button>
 				</div>
 			</li>
-						<li class="people__container"  style="background-image: url(img/people_img5.jpg)">
-				<div class="people__content">
+						<li class="people__container" style="background-image: url(img/people_img5.jpg)">
+				<div class="people__content" id="overlayContainer">
 					<div class="people__name">Константин Спилберг</div>
 					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<button class="more__btn" id="openOverlay">
+					<button class="moreBtn" id="openNow">
 						<div class="bText">Подробнее</div></button>
 				</div>
 			</li>
-						<li class="people__container"  style="background-image: url(img/people_img6.jpg)">
-				<div class="people__content">
+						<li class="people__container" style="background-image: url(img/people_img6.jpg)">
+				<div class="people__content" id="overlayContainer">
 					<div class="people__name">Константин Спилберг</div>
 					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<button class="more__btn" id="openOverlay">
+					<button class="moreBtn" id="openNow">
 						<div class="bText">Подробнее</div></button>
 				</div>
 			</li>
-						<li class="people__container"  style="background-image: url(img/people_img7.jpg)">
-				<div class="people__content">
+						<li class="people__container" style="background-image: url(img/people_img7.jpg)">
+				<div class="people__content" id="overlayContainer">
 					<div class="people__name">Константин Спилберг</div>
 					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-					<button class="more__btn" id="openOverlay">
+					<button class="moreBtn" id="openNow">
 						<div class="bText">Подробнее</div></button>
 				</div>
 			</li>
-						<li class="people__container"  style="background-image: url(img/people_img8.jpg)">
-				<div class="people__content">
+						<li class="people__container" style="background-image: url(img/people_img8.jpg)">
+				<div class="people__content" id="overlayContainer">
 					<div class="people__name">Константин Спилберг</div>
-					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<div class="people__comment" id="overlayContainer">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
 
-					<button class="more__btn" id="openOverlay">
+					<button class="moreBtn" id="openNow">
 						<div class="bText">Подробнее</div></button>
 				</div>
 			</li>
 		</ul>
 	</div>
+</section>
+
 	<section class="order__section  section>
 	<div class="order__container">
 		<div class="order__title">Закажите доставку</div>
@@ -504,7 +506,7 @@
 				<label for="" class="form__block">
 					<div class="form__block-title">Комментарий</div>
 					<textarea class="textarea__elem" name="comment" required></textarea>
-					<div class="error error_comm"></div>
+					<div class="error"></div>
 				</label>
 			</div>
 			<div class="form__row">
